--- a/DirectXGame.vcxproj.filters
+++ b/DirectXGame.vcxproj.filters
@@ -61,6 +61,12 @@
     <Filter Include="ヘッダー ファイル\player">
       <UniqueIdentifier>{9c6963cc-fcad-4ad1-92dc-ece206f182e4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\object">
+      <UniqueIdentifier>{85aa967b-8853-4636-97db-0a235900e1c9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\object">
+      <UniqueIdentifier>{605d1c18-58ec-46cb-8e6a-df7abea382fd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -78,14 +84,14 @@
     <ClCompile Include="scene\GameScene.cpp">
       <Filter>ソース ファイル\scene</Filter>
     </ClCompile>
-    <ClCompile Include="Object.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="player\Player.cpp">
       <Filter>ソース ファイル\player</Filter>
     </ClCompile>
     <ClCompile Include="playerbullet\PlayerBullet.cpp">
       <Filter>ソース ファイル\playerbullet</Filter>
+    </ClCompile>
+    <ClCompile Include="object\Object.cpp">
+      <Filter>ソース ファイル\object</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -170,14 +176,14 @@
     <ClInclude Include="3d\PrimitiveDrawer.h">
       <Filter>ヘッダー ファイル\3d</Filter>
     </ClInclude>
-    <ClInclude Include="Object.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="player\Player.h">
       <Filter>ヘッダー ファイル\player</Filter>
     </ClInclude>
     <ClInclude Include="playerbullet\PlayerBullet.h">
       <Filter>ヘッダー ファイル\playerbullet</Filter>
+    </ClInclude>
+    <ClInclude Include="object\Object.h">
+      <Filter>ヘッダー ファイル\object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
